# P3OS

./: .gitignore  CMakeLists.txt  README.md  linker.ld  makefile  readme.md
bootloader/: boot.S
kernel/: CMakeLists.txt  gpio.c  kernel.c  mmio.c  start.S  timer.c  uart.c
kernel/arch/arm/arm64/: CMakeLists.txt  linker.ld
kernel/include/: aux.h  gpio.h  mmio.h  peripherals.h  timer.h  uart.h
kernel/includes/: aarch64.h  uart.h
raspi-steps/generic_tests/: boot.s  kernel.c  kernel8.img  linker.ld  uart.c
raspi-steps/generic_tests/include/: common.h  peripherals.h  uart.h
